# Numerical-methods-I

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Trabalho/Numerical-methods-I-main/: CMakeLists.txt
Trabalho/Numerical-methods-I-main/src/: function.cpp  function.h  main.cpp  sonic_airplane.h
src/: aviaoSonico.cpp  aviaoSonico.h  function.cpp  function.h  main  main.cpp  method_example.cpp  output.cpp  output.h  saida.cpp  saida.h  sonic_airplane.cpp  sonic_airplane.h
src/utils/: gauss.cpp  gauss.h  linear_ops.cpp  linear_ops.h  matrix.cpp  matrix.h  vector.cpp  vector.h
